# Inkora

./: .gitattributes  .gitmodules  README.md  techstack.md  techstack.yml
3D/: cube.blend  mushroom.glb
Backend/: app.js
Backend/api/: app.js  package.json
Backend/ipfs/: .gitignore  install.sh  ipfs_operations.sh  quick_test.sh
Frontend/: index.html  index.js  mind.js  package.json  style.css  threeD.js
Frontend/public/: index.html
Frontend/src/: App.jsx  index.css  index.js  index.jsx  main.jsx  style.css
SmartContract/Flipper/: Cargo.toml  README.md  lib.rs
SmartContract/MoesCoaster/: Cargo.toml  README.md  azns_router.rs  lib.rs
SmartContract/MoesCoaster/impls/: mod.rs  moes_coaster.rs
SmartContract/MoesCoaster/libs/: errors.rs
SmartContract/MoesCoaster/traits/: moes_coaster.rs
UiUx/: README.md
docs/: .gitignore  Archy_GetBlock.md  Notes-LaunchEvent.md  Organisation.org  Software-Design.md  dennis_integrate_azero_id.md  index.md  package.json  piotr_safeAndRobuts.md  uladzislau_deep_dive_ink_storage.md
docs/.vitepress/: config.ts
docs/Beginning/: intro.md  motivation.md
docs/Future/: outlook.md
docs/Journey/: Friday-2.md  Friday.md  Monday-2.md  Monday.md  Saturday.md  Sunday-2.md  Sunday.md  Thursday-2.md  Thursday.md  Tuesday-2.md  Tuesday.md  Wednesday-2.md  Wednesday.md
docs/Notes/: Notes-LaunchEvent.md  Software-Design.md  Zustand.md  german_ink_championship.md  piotr_safeAndRobuts.md  uladzislau_deep_dive_ink_storage.md
playground/: .gitignore
playground/Zustand/: Notes.md  package-lock.json  package.json  setupTests.js
(+35 files in other folders)
